Warn the user to not mess build directories. Fix: http://bugs.kde.org/show_bug.cgi?id=59730
CCMAIL: 59730-done@bugs.kde.org

--- a/parts/autoproject/configureoptionswidgetbase.ui
+++ b/parts/autoproject/configureoptionswidgetbase.ui
@@ -176,7 +176,7 @@
                             <cstring>builddir_label</cstring>
                         </property>
                         <property name="text">
-                            <string>&amp;Build directory:</string>
+                            <string>&amp;Build directory (must be different for every different Configuration):</string>
                         </property>
                         <property name="buddy" stdset="0">
                             <cstring>builddir_edit</cstring>
